# barse

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
barse/: Cargo.toml  README.md
barse-derive/: Cargo.toml  README.md
barse-derive-impl/: Cargo.toml  README.md
barse-derive-impl/src/: barse_enum.rs  barse_field.rs  barse_struct.rs  condition.rs  from_byte_reader.rs  impl_idents.rs  lib.rs  opt.rs  result_aggregate.rs  size_query.rs  vec_len_query.rs
barse-derive-impl/src/barse_struct/: field_config.rs  struct_config.rs
barse-derive-impl/src/from_byte_reader/: parse_attrs.rs  parse_fields.rs  parse_struct_attrs.rs  struct_attrs.rs
barse-derive-impl/src/from_byte_reader/parse_fields/: parse_field_attrs.rs
barse-derive-impl/src/opt/: field_with_expr.rs  ignore_field_value.rs  opt_macro.rs  with_pat.rs
barse-derive/src/: condition.rs  from_byte_reader.rs  lib.rs
barse/src/: barse.rs  barse_as.rs  byte_read.rs  byte_sink.rs  byte_source.rs  bytemuck.rs  const_endian_byte_reader.rs  empty_with.rs  endian.rs  endian_byte_reader.rs  error.rs  ext.rs  flag_byte_reader.rs  flag_conditional.rs  from_byte_reader.rs  from_byte_reader_with.rs  from_reader.rs  from_reader_slice.rs  if_alloc.rs  if_std.rs  lib.rs  padding.rs  reader.rs  sealed.rs  sized_vec.rs  slice_sink.rs  slice_source.rs  util.rs  wrap.rs  zerocopy.rs
barse/src/barse_as/: bytes.rs
barse/src/endian/: big.rs  little.rs  native.rs  runtime.rs
barse/src/ext/: barse_as.rs  barse_read.rs  barse_write.rs  byte_sink_ext.rs  byte_source_ext.rs  if_std.rs
barse/src/from_reader/: def.rs  from_reader_slice.rs  integer.rs  option.rs  padding.rs  phantom_data.rs  remaining.rs  tuple.rs  u8_array.rs  u8_slice.rs  value.rs  vec.rs  with_endian.rs  with_fn.rs
barse/src/if_std/: read_source.rs  write_sink.rs
barse/src/reader/: big_endian_byte_reader.rs  const_endian_byte_reader.rs  cursor.rs  dynamic_byte_reader.rs  endian_byte_reader.rs  flag_byte_reader.rs  impl_box.rs  impl_cursor.rs  impl_mut_ref.rs  little_endian_byte_reader.rs  nil_byte_reader.rs
barse/src/util/: byte_array.rs  bytemuck.rs  error.rs  fixed_size.rs  padding.rs  slice_sink.rs  slice_source.rs  use_endian.rs  with_endian.rs  zerocopy.rs
barse/tests/: derive.rs  derive_with.rs  with.rs
src/: byte_read.rs  byte_reader.rs  condition.rs  endian.rs  endian_byte_reader.rs  error.rs  flag_byte_reader.rs  flag_conditional.rs  from_byte_reader.rs  from_reader_slice.rs  lib.rs  padding.rs  size_query.rs  sized_vec.rs
tests/: Cargo.toml  test_derive_struct.rs
