[package]
name = "parse-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]
repository = "https://github.com/axel-lord/barse-derive"
homepage = "https://github.com/axel-lord/barse"
readme = "./README.md"
description = "Procedural macros for barse."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
