[package]
name = "barse-derive-impl"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]
repository = "https://github.com/axel-lord/barse"
homepage = "https://github.com/axel-lord/barse"
readme = "./README.md"
description = "Implementation of procedural macros for barse."

[dependencies]
