[package]
name = "barse-derive"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]
repository = "https://github.com/axel-lord/barse"
homepage = "https://github.com/axel-lord/barse"
readme = "./README.md"
description = "Procedural macros for barse."

[lib]
proc-macro = true

[dependencies]
barse-derive-impl = { path = "../barse-derive-impl", version = "0.2.0"}
proc-macro2 = "1.0.56"
