[package]
name = "barse"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]
repository = "https://github.com/axel-lord/barse"
categories = ["parsing"]
keywords = ["binary"]
homepage = "https://github.com/axel-lord/barse"
readme = "./README.md"
description = "Binary parsing library."

[features]
default = ["derive"]
derive = ["dep:barse-derive"]

[dependencies]
bytesize = "1.2.0"
barse-derive = { path = "../barse-derive", version = "0.3.0", optional = true }
thiserror = "1.0.40"
anyhow = "1.0.71"
