[package]
name = "barse"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]
repository = "https://github.com/axel-lord/barse"
categories = ["parsing"]
keywords = ["binary"]
homepage = "https://github.com/axel-lord/barse"
readme = "./README.md"
description = "Binary parsing library."

[features]
default = ["derive"]
derive = ["dep:barse-derive"]
std = []

[dependencies]
barse-derive = { path = "../barse-derive", version = "0.5.0", optional = true }
paste = "1.0.15"

[lints]
workspace = true
