[package]
name = "barse"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]
repository = "https://github.com/axel-lord/barse"
categories = ["parsing"]
keywords = ["binary"]
homepage = "https://github.com/axel-lord/barse"
readme = "./README.md"
description = "Binary parsing library."

[features]
default = ["util"]
util = ["barse_as", "ext"]
ext = []
barse_as = []
derive = ["dep:barse-derive"]
std = ["thiserror/std", "alloc"]
zerocopy = ["dep:zerocopy", "barse_as"]
bytemuck = ["dep:bytemuck", "barse_as"]
alloc = []

[dependencies]
barse-derive = { path = "../barse-derive", version = "0.5.0", optional = true }
bytemuck = { version = "1.20.0", optional = true }
paste = "1.0.15"
thiserror = { version = "2.0.5", default-features = false }
zerocopy = { version = "0.8.13", optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
